TGUI 0.8.8  (TBD)
-----------------

- Added RightClicked signal to TreeView ([PR #125](https://github.com/texus/TGUI/pull/125))
- Changed the keyboard shortcuts in EditBox and TextBox for macOS
- Added getIndexById and getIdByIndex to ListBox
- Added global setEditCursorBlinkRate function
- Added renderer properties in ComboBox for disabled state
- Made updateTime() in Gui public and let it return if something changed
- Picture had wrong size when loading from file with a relative size
- String to float conversion could fail since 0.8.6 when C locale was changed
- Added bind functions to layouts to bind to inner size


TGUI 0.8.7  (8 February 2020)
-----------------------------

- TextBox can now have a default text that is displayed when it is empty ([PR #117](https://github.com/texus/TGUI/pull/117))
- Added SignalManager class to connect signals by widget name (even if widget not loaded yet) ([PR #112](https://github.com/texus/TGUI/pull/112))
- Added setTextSize function to Widget and Gui to allow changing text sizes globally
- Improved TextureManager to only load image once if different parts of image are requested
- Index as optional parameter in SignalItem (which was added in 0.8.6) didn't actually work yet
- MenuItemClicked signal is now also emitted when clicking on menu that has no menu items
- Added option to not replace existing widgets when loading widgets from file
- Added isAnimationPlaying function to Widget (for the show and hide animations)
- Fixed linking issues when compiling TGUI as a static library while dynamically linking SFML
- MousePressed signal in ListBox is now send after the selected item changed instead of before


TGUI 0.8.6  (13 October 2019)
-----------------------------

- Added sort function to ListView to sort data based on values in a chosen column ([PR #107](https://github.com/texus/TGUI/pull/107))