@@ -373,6 +373,20 @@ namespace tgui
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    Widget::Ptr Gui::getFocusedChild() const
+    {
+        return m_container->getFocusedChild();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    Widget::Ptr Gui::getFocusedLeaf() const
+    {
+        return m_container->getFocusedLeaf();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 #ifndef TGUI_REMOVE_DEPRECATED_CODE
     bool Gui::setWidgetName(const Widget::Ptr& widget, const std::string& name)
     {
