@@ -6,10 +6,11 @@ TGUI 0.8.8  (TBD)
 - Added getIndexById and getIdByIndex to ListBox
 - Added global setEditCursorBlinkRate function
 - Added renderer properties in ComboBox for disabled state
+- Added bind functions to layouts to bind to inner size
+- Added getFocusedChild() and getFocusedLeaf() to Container and Gui
 - Made updateTime() in Gui public and let it return if something changed
 - Picture had wrong size when loading from file with a relative size
 - String to float conversion could fail since 0.8.6 when C locale was changed
-- Added bind functions to layouts to bind to inner size
 
 
 TGUI 0.8.7  (8 February 2020)
